# quiver-lite

./: .gitignore  README.md  zecwallet-lite.pro
lib/: Cargo.toml
res/: Info.plist  appdmg.json  logo.icns
res/libsodium/: buildlibsodium.sh
src/: addressbook.cpp  addressbook.ui  camount.cpp  connection.cpp  connection.ui  controller.cpp  controller.h  createzcashconfdialog.ui  datamodel.h  firsttimewizard.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recurring.cpp  recurringmultiple.ui  requestdialog.cpp  requestdialog.ui  settings.cpp  settings.h  settings.ui  txtablemodel.cpp  websockets.cpp  websockets.h
src/scripts/: control  desktopentry  dobuild.ps1  mkmacdmg.sh  mkrelease.sh
