[package]
name = "qtlib"
version = "0.1.0"
authors = ["ZecWallet"]
edition = "2018"

[lib]
name = "zecwalletlite"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.58"
lazy_static = "1.4.0"
zecwalletlitelib = { git = "https://github.com/Arrowchain/arwwallet-light-cli", rev = "afad8972948d749510c9f4af51e93be0587bed21" }
